tried to fix the overscroll on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,14 @@
     padding: 1rem;
   }
 }
+
+html,
+body {
+  overflow-x: hidden; /* oprește scroll-ul orizontal */
+  width: 100%;
+  position: relative;
+}
+
+* {
+  box-sizing: border-box;
+}
